--- a/src/main/webapp/app/entities/international-theme/international-theme-dialog.component.html
+++ b/src/main/webapp/app/entities/international-theme/international-theme-dialog.component.html
@@ -37,6 +37,19 @@
                 This field is required.
             </small>
         </div>
+        <div class="form-group">
+            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.internationalTheme.theme" for="field_theme">Theme</label>
+            <select class="form-control" id="field_theme" name="theme" [(ngModel)]="internationalTheme.theme"  required>
+                <option *ngIf="!editForm.value.theme" [ngValue]="null" selected></option>
+                <option [ngValue]="themeOption.id === internationalTheme.theme?.id ? internationalTheme.theme : themeOption" *ngFor="let themeOption of themes; trackBy: trackThemeById">{{themeOption.id}}</option>
+            </select>
+        </div>
+        <div [hidden]="!(editForm.controls.theme?.dirty && editForm.controls.theme?.invalid)">
+            <small class="form-text text-danger"
+                [hidden]="!editForm.controls.theme?.errors?.required" jhiTranslate="entity.validation.required">
+                This field is required.
+            </small>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
