fix(all): fix un peu de tout

--- a/src/main/webapp/app/entities/international-theme/international-theme-detail.component.html
+++ b/src/main/webapp/app/entities/international-theme/international-theme-detail.component.html
@@ -17,7 +17,7 @@
         <dt><span jhiTranslate="hopiestraWebSiteApp.internationalTheme.theme">Theme</span></dt>
         <dd>
             <div *ngIf="internationalTheme.theme">
-                <a [routerLink]="['/theme', internationalTheme.theme?.id]">{{internationalTheme.theme?.id}}</a>
+                <a [routerLink]="['/theme', internationalTheme.theme?.id]">{{internationalTheme.theme?.adminTitle}}</a>
             </div>
         </dd>
     </dl>
