--- a/src/main/webapp/app/entities/theme/theme-detail.component.html
+++ b/src/main/webapp/app/entities/theme/theme-detail.component.html
@@ -8,6 +8,10 @@
         <dd>
             <span>{{theme.order}}</span>
         </dd>
+        <dt><span jhiTranslate="hopiestraWebSiteApp.theme.adminTitle">Admin Title</span></dt>
+        <dd>
+            <span>{{theme.adminTitle}}</span>
+        </dd>
         <dt><span jhiTranslate="hopiestraWebSiteApp.theme.parentTheme">Parent Theme</span></dt>
         <dd>
             <div *ngIf="theme.parentTheme">
