--- a/src/main/webapp/app/entities/article/article-dialog.component.html
+++ b/src/main/webapp/app/entities/article/article-dialog.component.html
@@ -30,20 +30,6 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.article.updateDate" for="field_updateDate">Update Date</label>
-            <div class="d-flex">
-                <input id="field_updateDate" type="datetime-local" class="form-control" name="updateDate" [(ngModel)]="article.updateDate"
-                />
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.article.creationDate" for="field_creationDate">Creation Date</label>
-            <div class="d-flex">
-                <input id="field_creationDate" type="datetime-local" class="form-control" name="creationDate" [(ngModel)]="article.creationDate"
-                />
-            </div>
-        </div>
-        <div class="form-group">
             <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.article.deleteDate" for="field_deleteDate">Delete Date</label>
             <div class="d-flex">
                 <input id="field_deleteDate" type="datetime-local" class="form-control" name="deleteDate" [(ngModel)]="article.deleteDate"
@@ -79,13 +65,13 @@
             <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.article.theme" for="field_theme">Theme</label>
             <select class="form-control" id="field_theme" name="theme" [(ngModel)]="article.theme" >
                 <option [ngValue]="null"></option>
-                <option [ngValue]="themeOption.id === article.theme?.id ? article.theme : themeOption" *ngFor="let themeOption of themes; trackBy: trackThemeById">{{themeOption.name}}</option>
+                <option [ngValue]="themeOption.id === article.theme?.id ? article.theme : themeOption" *ngFor="let themeOption of themes; trackBy: trackThemeById">{{themeOption.adminTitle}}</option>
             </select>
         </div>
         <div class="form-group">
             <label jhiTranslate="hopiestraWebSiteApp.article.tags" for="field_tags">Tags</label>
             <select class="form-control" id="field_tags" multiple name="tags" [(ngModel)]="article.tags">
-                <option [ngValue]="getSelected(article.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}</option>
+                <option [ngValue]="getSelected(article.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.code}}</option>
             </select>
         </div>
         <div class="form-group">
