--- a/src/main/webapp/app/entities/theme/theme-dialog.component.html
+++ b/src/main/webapp/app/entities/theme/theme-dialog.component.html
@@ -17,6 +17,17 @@
             <input type="number" class="form-control" name="order" id="field_order"
                 [(ngModel)]="theme.order" />
         </div>
+        <div class="form-group">
+            <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.theme.adminTitle" for="field_adminTitle">Admin Title</label>
+            <input type="text" class="form-control" name="adminTitle" id="field_adminTitle"
+                [(ngModel)]="theme.adminTitle" required/>
+            <div [hidden]="!(editForm.controls.adminTitle?.dirty && editForm.controls.adminTitle?.invalid)">
+                <small class="form-text text-danger"
+                   [hidden]="!editForm.controls.adminTitle?.errors?.required" jhiTranslate="entity.validation.required">
+                   This field is required.
+                </small>
+            </div>
+        </div>
 
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="hopiestraWebSiteApp.theme.parentTheme" for="field_parentTheme">Parent Theme</label>
