--- a/src/main/webapp/app/entities/theme/theme.component.html
+++ b/src/main/webapp/app/entities/theme/theme.component.html
@@ -18,6 +18,7 @@
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
             <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="order"><span jhiTranslate="hopiestraWebSiteApp.theme.order">Order</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="adminTitle"><span jhiTranslate="hopiestraWebSiteApp.theme.adminTitle">Admin Title</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="parentTheme.name"><span jhiTranslate="hopiestraWebSiteApp.theme.parentTheme">Parent Theme</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="backgroundPicture.name"><span jhiTranslate="hopiestraWebSiteApp.theme.backgroundPicture">Background Picture</span> <span class="fa fa-sort"></span></th>
             <th></th>
@@ -27,6 +28,7 @@
             <tr *ngFor="let theme of themes ;trackBy: trackId">
                 <td><a [routerLink]="['../theme', theme.id ]">{{theme.id}}</a></td>
                 <td>{{theme.order}}</td>
+                <td>{{theme.adminTitle}}</td>
                 <td>
                     <div *ngIf="theme.parentTheme">
                         <a [routerLink]="['../theme', theme.parentTheme?.id ]" >{{theme.parentTheme?.name}}</a>
